jenkins/jenkins-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: devops-tools
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: ak-jenkins.ldc.squareops.in
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: jenkins-service
                port:
                  number: 8080
